--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "next": "14.1.4",
+    "classnames": "^2.5.1",
+    "react-icons": "^4.12.0"
+
   },
   "devDependencies": {
     "typescript": "^5",
