--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^4.12.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.10.4",
     "tailwind-datepicker-react": "^1.4.3",
     "tailwind-merge": "^2.2.0",
